--- a/portafolio.html
+++ b/portafolio.html
@@ -73,10 +73,16 @@
           <ul class="projects_img">
             <li class="projects_li descripcion_box">
               <img src="./images/1-tecnoduck.jpg" class="img_portafolio" alt="Sitio web" width="370" />
-             
+              <p class="img-text m-0">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Ratione reiciendis, laudantium ex consequuntur similique
+                  asperiores quas perferendis minus cumque molestiae quos ipsa
+                  tempora cum dolore aliquam vitae architecto officiis et!
+                </p>
                   <div class="other_descripcion" >
                   <h2 class="tittle_descripcion ">Tecnoduck</h2>
                   <p class="tittle_projects">Sitio-web</p>
+                 
                   </div>
             </li>
 
