--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     />
 
     <link rel="stylesheet" href="css/stayles.css" />
+    
     <title>WebStudio</title>
   </head>
 <div>
@@ -31,7 +32,9 @@
         <span><a class="logo" href="#">WebStudio</a></span>
         <nav class="navigation">
           <ul class="navigation_bar">
-            <li><a href="./index.html" class="nav_tap current">Estudio</a></li>
+            <li><a href="./index.html" class="nav_tap current">Estudio</a>
+              
+            </li>
             <li><a href="./portafolio.html" class="nav_tap">Portafolio</a></li>
             <li><a href="#" class="nav_tap">Contactos</a></li>
           </ul>
@@ -380,6 +383,7 @@
         </div>
       </div>
     </footer>
+    <script src="./index.js"></script>
   </body>
 </html>
 
