--- a/portafolio.html
+++ b/portafolio.html
@@ -68,7 +68,7 @@
             </li>
           </ul>
         </div>
-      </>
+      />
       <section class="projects container section">
           <ul class="projects_img">
             <li class="projects_li descripcion_box">
@@ -81,13 +81,18 @@
                 </p>
                   <div class="other_descripcion" >
                   <h2 class="tittle_descripcion ">Tecnoduck</h2>
-                  <p class="tittle_projects">Sitio-web</p>
-                 
+                  <p class="tittle_projects">Sitio-web</p> 
                   </div>
-            </li>
+            </li>    
 
             <li class="projects_li descripcion_box">
               <img src="./images/2-poster.jpg" alt="Diseño" width="370" />
+              <p class="img-text m-0">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Ratione reiciendis, laudantium ex consequuntur similique
+                asperiores quas perferendis minus cumque molestiae quos ipsa
+                tempora cum dolore aliquam vitae architecto officiis et!
+              </p>
                 <div class=" other_descripcion" >
                    <h2 class="tittle_descripcion">Póster de Nueva Orleans vs strella Dorada</h2>
                 </div>
