--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
         <span><a class="logo" href="#">WebStudio</a></span>
         <nav class="navigation">
           <ul class="navigation_bar">
-            <li><a href="./index.html" class="nav_tap current">Estudio</a>
+            <li><a href="./index.html" class="nav_tap current link">Estudio</a>
               
             </li>
-            <li><a href="./portafolio.html" class="nav_tap">Portafolio</a></li>
-            <li><a href="#" class="nav_tap">Contactos</a></li>
+            <li><a href="./portafolio.html" class="nav_tap link">Portafolio</a></li>
+            <li><a href="#" class="nav_tap link">Contactos</a></li>
           </ul>
         </nav>
         <ul class="navigation_links">
