--- a/portafolio.html
+++ b/portafolio.html
@@ -29,14 +29,16 @@
 
   <body>
     <!-- header-section-->
-       <header class="main_header">
+      
+    
+    <header class="main_header">
       <div class="navigation_container container">
         <span><a class="logo" href="#">WebStudio</a></span>
         <nav class="navigation">
           <ul class="navigation_bar">
-            <li><a href="./index.html" class="nav_tap ">Estudio</a></li>
-            <li><a href="./portafolio.html" class="nav_tap current">Portafolio</a></li>
-            <li><a href="#" class="nav_tap">Contactos</a></li>
+            <li><a href="./index.html" class="nav_tap link">Estudio</a></li>
+            <li><a href="./portafolio.html" class="nav_tap current link">Portafolio</a></li>
+            <li><a href="#" class="nav_tap link">Contactos </a></li>
           </ul>
         </nav>
         <ul class="navigation_links">
