--- a/portafolio.html
+++ b/portafolio.html
@@ -71,10 +71,10 @@
           </ul>
         </div>
       />
-      <section class="projects  section">
+      <section class="projects ">
         <ul class="list container">
 
-          <li class="portfolio-item">
+          <li class="portfolio-item ">
             <div class="img-container">
               <img
                 src="./resources/img/PC-IMG-P.jpg"
