--- a/portafolio.html
+++ b/portafolio.html
@@ -71,8 +71,8 @@
           </ul>
         </div>
       />
-      <section class="projects ">
-        <ul class="list container">
+      <section class="projects container ">
+        <ul class="list ">
 
           <li class="portfolio-item ">
             <div class="img-container">
@@ -294,7 +294,7 @@
     </main>
   </body>
   <!-- footer-section-->
- <footer class="footer">
+ <footer class="footer section">
       <div class="container general-footer">
         <div class="footer-container"> 
         <span class="footer_logo">WebStudio</span>
@@ -310,7 +310,7 @@
           </ul>
         </address>
         </div>
-        <div class="footer-social-networks">
+        <div class="footer-social-networks ">
           <p class="text-social-networks">Encuentranos en</p>
           <ul class="social-networks-list">
                 <li class="social-networks-icon-footer">
