--- a/portafolio.html
+++ b/portafolio.html
@@ -292,7 +292,7 @@
         </ul>
       </section>
     </main>
-  </body>
+
   <!-- footer-section-->
  <footer class="footer section">
       <div class="container general-footer">
@@ -345,4 +345,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/modal.js"></script>
+  </body>
 </html>
