--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
     <main>
       <section class="main_seccion ">
         <div class="container">
+          <div class="backdrop">
+
+          
+          </div>
           <h1 class="main_title ">soluciones eficientes para <br> su negocio</h1>
           <button class="btn-primary" type="button">Solicita nuestro servicio</button>
         </div>
@@ -383,7 +387,7 @@
         </div>
       </div>
     </footer>
-    <script src="./index.js"></script>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
 
