--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
       <div class="modal">
         <button class="data-modal-close" data-modal-close> Cerrar</button>
       </div>
+      <div class="">
+
+      </div>
     </div>
  
 
